--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -4,6 +4,10 @@
 @tailwind utilities;
 
 :root {
+  background-color: #050a23;
+}
+
+/* :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
@@ -70,7 +74,7 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
-}
+} */
 
 .layout-padding {
   padding-left: 1rem;
