added nav animations. todo: refactor user account/ nav items and add logout logic

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,4 +1,6 @@
 @import "react-big-calendar/lib/css/react-big-calendar.css";
+@import "./styles/button.css";
+@import "./styles/header.css";
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
