added logic for form rendering based on edit/creation mode, this needs cleaned up

--- a/frontend/src/styles/button.css
+++ b/frontend/src/styles/button.css
@@ -9,3 +9,7 @@
 .button-yellow {
   @apply !bg-kenConnect-yellow text-kenConnect-black shadow-kenConnect-yellow border border-kenConnect-yellow;
 }
+
+.button-red {
+  @apply !bg-kenConnect-red text-kenConnect-white shadow-kenConnect-red border border-kenConnect-black;
+}
