--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,6 +1,7 @@
 @import "react-big-calendar/lib/css/react-big-calendar.css";
 @import "./styles/button.css";
 @import "./styles/header.css";
+@import "./styles/datepicker.css";
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
