added custom toolbar to react big calendar

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -6,8 +6,13 @@
 @tailwind components;
 @tailwind utilities;
 
+html {
+  overflow: hidden;
+}
+
 :root {
   background-color: #050a23;
+  overflow: hidden;
 }
 
 .layout-padding {
